--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ requests = "*"
 django-crispy-forms = "*"
 unidecode = "*"
 numpy = "*"
+django-countries = {extras = ["pyuca"], version = "*"}
 
 [dev-packages]
 
