add comentary to brand view. update commentary models

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ django-crispy-forms = "*"
 unidecode = "*"
 numpy = "*"
 django-countries = {extras = ["pyuca"], version = "*"}
+airtable = "*"
 
 [dev-packages]
 
