used black and isort to format the code, changed settings to use environment variables, changed from pipenv to venv

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,16 @@ airtable_backups/*.pkl
 secret.py
 .env
 
+# virtualenv
+venv
+
 # database
 *.sqlite3
+
+# Pyenv
+.python-version
+
+# editor
+.vscode
+.idea
+.editorconfig
