add airtable values

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -14,3 +14,7 @@ ALLOWED_HOSTS = "example.com app.example.com chat.example.com"
 USERNAME=my_username
 TOKEN=some_token
 PASSWORD=my_password
+
+# airtable keys
+base_key=ABC
+api_key=ABC
