--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -14,3 +14,6 @@ ALLOWED_HOSTS = "example.com app.example.com chat.example.com"
 USERNAME=my_username
 TOKEN=some_token
 PASSWORD=my_password
+# airtable keys
+BASE_KEY=ABC
+API_KEY=ABC
