Add airtable env variables in caps

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -15,5 +15,5 @@ USERNAME=my_username
 TOKEN=some_token
 PASSWORD=my_password
 # airtable keys
-BASE_KEY=ABC
-API_KEY=ABC
+AIRTABLE_BASE_ID=ABC
+AIRTABLE_API_KEY=ABC
