--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ gunicorn==20.1.0
 django-admin-list-filter-dropdown==1.0.3
 python-Levenshtein==0.12.2
 graphene-django==2.15.0
+django-filter==21.1
