--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -9,8 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      matrix:
-        python-version: [3.10.4]
+      python-version: 3.8
 
     steps:
     - uses: actions/checkout@v3
@@ -22,6 +21,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Check black formatting
+      run: |
+        black . --check
     - name: Run Tests
       run: |
         python manage.py test
