--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      python-version: [3.10.4, 3.8]
+      matrix:
+        python-version: [3.10.4, 3.8]
 
     steps:
     - uses: actions/checkout@v3
