--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install wheel
         pip install -r requirements.txt
     - name: Check black formatting
       run: |
