--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10.4, 3.8]
+        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v3
@@ -21,7 +21,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheel
+        cp bankgreen/.env.template bankgreen/.env
         pip install -r requirements.txt
     - name: Check black formatting
       run: |
