--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-debug-toolbar==3.2.4
 django-extensions==3.1.5
 django-model-utils==4.2.0
 djangorestframework==3.13.1
+django-cors-headers==3.12.0
 networkx==2.5.1
 pandas==1.1.5
 pycountry==22.1.10
