add cache to graphql (#43)

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -11,9 +11,14 @@ SECRET_KEY=fdjlk5-fd8usa8-e2te!78j34)l+6&x0@ob$-fjls;dffdfd-55*+s5j;fddsa8;l[.;d
 DEBUG=False
 # ALLOWED_HOSTS = "domain1 domain2 domain3 domain4"
 ALLOWED_HOSTS = "example.com app.example.com chat.example.com"
+CORS_ALLOWED_ORIGINS=https://example.com https://example.org
 USERNAME=my_username
 TOKEN=some_token
 PASSWORD=my_password
 # airtable keys
 AIRTABLE_BASE_ID=ABC
 AIRTABLE_API_KEY=ABC
+
+# cache time; set this to the time in seconds you want to cache responses
+CACHE_MAX_AGE=0 
+
