--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 airtable==0.4.8
 black==22.3.0
 isort==5.10.1
-django==4.0.7
+django==4.1.4
 django-braces==1.15.0
 django-cryptography==1.0
 django-debug-toolbar==3.2.4
@@ -30,3 +30,4 @@ np==1.0.2
 Markdown==3.3.7
 markdown-link-attr-modifier==0.2.0
 django-cities-light==3.9.2
+symspellpy==6.7.7
