--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-extensions==3.1.5
 django-model-utils==4.2.0
 djangorestframework==3.13.1
 django-cors-headers==3.12.0
+django-json-widget==1.1.1
 networkx==2.5.1
 pandas==1.4.2
 pycountry==22.1.10
