WIP: update page styles and usability

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,4 @@ Markdown==3.3.7
 markdown-link-attr-modifier==0.2.0
 django-cities-light==3.9.2
 symspellpy==6.7.7
+django-autocomplete-light==3.9.4
