--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ airtable==0.4.8
 black==22.3.0
 isort==5.10.1
 django==4.1.4
-django-ajax-selects=2.2.0
+django-ajax-selects==2.2.0
 django-braces==1.15.0
 django-cryptography==1.0
 django-debug-toolbar==3.2.4
