--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -1,21 +1,7 @@
 # We use Python-dotenv package for environment variables, https://github.com/theskumar/python-dotenv
 
-# If there's only one value to variable do:
-USER=John
-# If thre's multiple values to varible, put them in a list without commas:
-ALLOWED = "1.5.654.657 localhost example.com"
-
-
-# This are the real varibles of the project, with dummy data.
-SECRET_KEY=fdjlk5-fd8usa8-e2te!78j34)l+6&x0@ob$-fjls;dffdfd-55*+s5j;fddsa8;l[.;dfda
-DEBUG=False
-# ALLOWED_HOSTS = "domain1 domain2 domain3 domain4"
-ALLOWED_HOSTS = "example.com app.example.com chat.example.com"
-CORS_ALLOWED_ORIGIN_REGEXES=https://example.com https://example.org
-USERNAME=my_username
-TOKEN=some_token
-PASSWORD=my_password
-
-# cache time; set this to the time in seconds you want to cache responses
-CACHE_MAX_AGE=0 
+CALENDAR_URL="https://calendar.google.com"
+DEBUG=True
+CORS_ALLOWED_ORIGIN_REGEXES= .*
+CACHE_MAX_AGE=14400
 
