Instrument OpenTelemetry tracing

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -5,3 +5,5 @@ DEBUG=True
 CORS_ALLOWED_ORIGIN_REGEXES= .*
 CACHE_MAX_AGE=14400
 SECRET_KEY=notsecret
+OTLP_GRPC_ENDPOINT=http://localhost:4317
+OTEL_PYTHON_DJANGO_INSTRUMENT=False
