--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ markdown-link-attr-modifier>=0.2.0,<0.3
 django-cities-light==3.9.2
 symspellpy==6.7.7
 django-autocomplete-light==3.9.4
+django-object-actions==4.2.0
