--- a/requirements.txt
+++ b/requirements.txt
@@ -1,172 +1,35 @@
-aniso8601==9.0.1
-anyio==3.7.1
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asgiref==3.7.2
-asttokens==2.2.1
-async-lru==2.0.3
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
 black==22.3.0
-bleach==6.0.0
-bs4==0.0.1
-build==0.10.0
-building_search @ file:///Users/ihc/programming/350_seattle/350_seattle_building_ownership
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==2.0.12
-click==8.1.6
-click-plugins==1.1.1
-cligj==0.7.2
-comm==0.1.3
-contourpy==1.1.0
-cryptography==41.0.4
-cycler==0.11.0
-debugpy==1.6.7
-decorator==4.4.2
-defusedxml==0.7.1
-Django==4.1.7
-django-admin-list-filter-dropdown==1.0.3
+isort==5.10.1
+django==4.1.7
 django-ajax-selects==2.2.0
-django-appconf==1.0.5
-django-autocomplete-light==3.9.4
-django-autoslug==1.9.9
 django-braces==1.15.0
-django-cities-light==3.9.2
-django-cors-headers==3.12.0
-django-countries==7.2.1
-django-crispy-forms==1.13.0
 django-cryptography==1.0
 django-debug-toolbar==3.2.4
 django-extensions==3.1.5
-django-filter==21.1
-django-json-widget==1.1.1
 django-model-utils==4.2.0
-django-prometheus==2.3.1
 djangorestframework==3.13.1
-editdistpy==0.1.3
-executing==1.2.0
-fastjsonschema==2.18.0
-Fiona==1.9.4.post1
-fonttools==4.41.1
-fqdn==1.5.1
-future==0.18.3
-geopandas==0.13.2
-graphene==3.2.1
-graphene-django==3.0.2
-graphql-core==3.2.3
-graphql-relay==3.2.0
-gunicorn==20.1.0
-idna==3.4
-iniconfig==2.0.0
-ipykernel==6.25.0
-ipython==8.14.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.7
-isoduration==20.11.0
-isort==5.10.1
-jedi==0.18.2
-Jinja2==3.1.2
-json5==0.9.14
-jsonfield==3.1.0
-jsonpointer==2.4
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.24.0
-kiwisolver==1.4.4
-Markdown==3.3.7
-markdown-link-attr-modifier==0.2.1
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mistune==3.0.1
-mypy-extensions==1.0.0
-nbclient==0.8.0
-nbconvert==7.7.3
-nbformat==5.9.1
-nest-asyncio==1.5.6
+django-cors-headers==3.12.0
+django-json-widget==1.1.1
 networkx==2.5.1
-notebook==7.0.0
-notebook_shim==0.2.3
-np==1.0.2
-numpy==1.25.1
-overrides==7.3.1
-packaging==23.1
 pandas==1.4.2
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.0
-platformdirs==3.9.1
-pluggy==1.2.0
-progressbar2==4.2.0
-prometheus-client==0.17.1
-promise==2.3
-prompt-toolkit==3.0.39
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
 pycountry==22.1.10
-pycparser==2.21
-Pygments==2.15.1
-pyparsing==3.0.9
-pyproj==3.6.0
-pyproject_hooks==1.0.0
-pytest==7.4.0
-python-dateutil==2.8.2
 python-dotenv==0.19.2
-python-json-logger==2.0.7
-python-Levenshtein==0.12.2
-python-utils==3.8.1
-pytz==2023.3
-PyYAML==6.0.1
-pyzmq==25.1.0
-qtconsole==5.4.3
-QtPy==2.3.1
 qwikidata==0.4.0
-referencing==0.30.0
 requests==2.27.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.9.2
-seaborn==0.12.2
-Send2Trash==1.8.2
-shapely==2.0.1
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
-sqlparse==0.4.4
-stack-data==0.6.2
+django-crispy-forms==1.13.0
+unidecode
+django-countries==7.2.1
+gunicorn==20.1.0
+django-admin-list-filter-dropdown==1.0.3
+python-Levenshtein==0.12.2
+graphene==3.2.1
+graphene-django>=3.0.2,<3.1
+django-filter==21.1
+jsonfield==3.1.0
+django-json-widget==1.1.1
+np==1.0.2
+Markdown==3.3.7
+markdown-link-attr-modifier>=0.2.0,<0.3
+django-cities-light==3.9.2
 symspellpy==6.7.7
-terminado==0.17.1
-text-unidecode==1.3
-tinycss2==1.2.1
-tornado==6.3.2
-traitlets==5.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-Unidecode==1.3.7
-uri-template==1.3.0
-urllib3==1.26.16
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.1
-widgetsnbextension==4.0.8
+django-autocomplete-light==3.9.4
