--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cryptography==1.0
 django-debug-toolbar==3.2.4
 django-extensions==3.1.5
 django-model-utils==4.2.0
+django-prometheus==2.3.1
 djangorestframework==3.13.1
 django-cors-headers==3.12.0
 django-json-widget==1.1.1
