--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-debug-toolbar==3.2.4
 django-extensions==3.1.5
 django-model-utils==4.2.0
 djangorestframework==3.13.1
+django-reversion==5.0.12
 django-cors-headers==3.12.0
 django-json-widget==1.1.1
 networkx==2.5.1
