set username and password as env variable. Small modification in html file.

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -5,3 +5,5 @@ DEBUG=True
 CORS_ALLOWED_ORIGIN_REGEXES= .*
 CACHE_MAX_AGE=14400
 SECRET_KEY=notsecret
+EMAIL_HOST_USER = "my_user@domain.com"
+EMAIL_HOST_PASSWORD = "my_password"
