--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,4 @@ markdown-link-attr-modifier>=0.2.0,<0.3
 django-cities-light==3.9.2
 symspellpy==6.7.7
 django-autocomplete-light==3.9.4
+jsonschema==4.21.1
