updated .env.template. renamed endpoint. added curl command for api endpoint in readme.

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -7,3 +7,4 @@ CACHE_MAX_AGE=14400
 SECRET_KEY=notsecret
 EMAIL_HOST_USER = "my_user@domain.com"
 EMAIL_HOST_PASSWORD = "my_password"
+REST_API_CONTACT_SINGLE_TOKEN = "single token"
