--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-reversion==5.0.12
 django-cors-headers==3.12.0
 django-json-widget==1.1.1
 networkx==2.5.1
+numpy>=1.21.0,<2.0.0
 pandas>=2.2
 pycountry==22.1.10
 python-dotenv==0.19.2
