--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -8,3 +8,4 @@ SECRET_KEY=notsecret
 EMAIL_HOST_USER = "my_user@domain.com"
 EMAIL_HOST_PASSWORD = "my_password"
 REST_API_CONTACT_SINGLE_TOKEN = "single token"
+HARVEST_API_TOKEN = "your_token_here"
