refactor: update .env.template

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -3,8 +3,11 @@
 CALENDAR_URL="https://calendar.google.com"
 DEBUG=True
 CORS_ALLOWED_ORIGIN_REGEXES= .*
+CORS_ALLOWED_ORIGINS = ['https://bank.green', 'https://api.bank.green', 'http://localhost:3000', 'http://127.0.0.1:3000']
 CACHE_MAX_AGE=14400
 SECRET_KEY=notsecret
 EMAIL_HOST_USER = "my_user@domain.com"
 EMAIL_HOST_PASSWORD = "my_password"
 REST_API_CONTACT_SINGLE_TOKEN = "single token"
+ALLOWED_HOSTS = ['bank.green', 'api.bank.green', 'localhost', '127.0.0.1']
+CORS_ALLOW_CREDENTIALS = True
