--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,10 +1,10 @@
 [settings]
+profile=black
 lines_after_imports=2
 default_section = THIRDPARTY
 known_first_party = src  # change it for the name of your django project
 known_django = django
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 skip=venv,migrations,
-
 # in project directory run: isort -rc .
 # in project directory run: black src
