Dependency sort with precedence to black then isort check in github actions (#183)
* Dependency sort with precedence to black then isort check in github Actions

* added back the removed line

* fixed all isort dependencies

* Added instructions in Readme to sort dependencies and formatting

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,4 +1,6 @@
 [settings]
+profile=black
+line_length= 100
 lines_after_imports=2
 default_section = THIRDPARTY
 known_first_party = src  # change it for the name of your django project
