GROOT-387 Fix import order (isort)

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -6,7 +6,7 @@ default_section = THIRDPARTY
 known_first_party = src  # change it for the name of your django project
 known_django = django
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-skip=venv,migrations,
+skip=venv,migrations,.venv,env
 
 # in project directory run: isort -rc .
 # in project directory run: black src
