add harvest token to .env.template

--- a/bankgreen/.env.template
+++ b/bankgreen/.env.template
@@ -11,3 +11,4 @@ EMAIL_HOST_PASSWORD = "my_password"
 REST_API_CONTACT_SINGLE_TOKEN = "single token"
 ALLOWED_HOSTS = ['bank.green', 'api.bank.green', 'localhost', '127.0.0.1']
 CORS_ALLOW_CREDENTIALS = True
+HARVEST_TOKEN = "secret"
